# cpp-russia-2017-clion

./: Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  Collisions.cpp  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  GameWidget.cpp  GameWidget.h  main.cpp  readme.md  test.cpp
Tips&Tricks/1_Navigation/: 1_Navigate_to_smth_you_know.md  2_Navigate_via_types.md  3_Find_Usages.md  4_Hierarchies_and_File_Structure.md  5_Navigate_to_somewhere_you_have__already_been.md
Tips&Tricks/2_Documentation/: 1_Get_documentation_for_the_symbol.md  2_Document_the_code_using_Doxygen_format.md
Tips&Tricks/3_Tune_your_IDE/: 1_Customize_your_editor.md  2_Customize_the_Code_Style.md  3_Customized_generated_code.md
Tips&Tricks/4_Build_Run_Test/: 1_Build_and_Run.md  2_Unit_Testing.md
Tips&Tricks/5_Code_quality/: 1_Readable_code.md  2_Debug.md  3_Use_Code_Analysis.md
Tips&Tricks/6_Create_new_code/: 1_Create_New_Class.md  2_Generate_code.md  3_Refactor_code.md
Tips&Tricks/7_Tools/: 1_CMake.md  2_Terminal.md  3_External_Tools.md  4_Python_and_others.md  5_VCS.md
Tips&Tricks/Navigation/: 1_Navigate_to_smth_you_know.md  2_Navigate_via_types.md  3_Find_Usages.md  4_Hierarchies_and_File_Structure.md  5_Navigate_to_somewhere_you_have__already_been.md
Tips&Tricks/Tune your IDE/: 1_Customize_your_editor.md  2_Customize_the_Code_Style.md  3_Customized_generated_code.md
